@@ -1,6 +1,8 @@
 2004-06-08  Albert Chu  <chu11@llnl.gov>
 
-	* src/libgendersllnl/Makefile.am: Minor fix for distcheck.
+	* src/libgendersllnl/Makefile.am, src/Libgendersllnl/Makefile.am,
+	src/Gendersllnl/Makefile.am, compat/Makefile.am: Minor fixes for
+	distcheck.
 	
 2004-05-19  Albert Chu  <chu11@llnl.gov>
 
